# Header42

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: HeaderReplacer.cpp  HeaderReplacer.h  main.cpp
src/Entities/: Header.cpp  Header.h
src/Flag/: FlagOutputpath.h  FlagSource.h  FlagUsename.h  IFlag.h  IFlagValue.h
src/Utils/: FileUtils.cpp  Utils.cpp  Utils.h
src/Utils/FileService/: FileService.cpp  FileService.h
src/Utils/Logger/: ILogger.h  LogService.cpp  LogService.h  Logger.cpp  Logger.h
